--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project2android">
-        <activity
-            android:name=".MapActivity2"
-            android:exported="false" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -32,7 +29,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="z" />
+            android:value="AIzaSyBYfHQKZyDx4Wio-JfZ2aU4qNUEpJU9Flc" />
 
         <meta-data
             android:name="com.google.android.gms.version"
